--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vasyaevstropov.runmanager">
 
+    <permission
+        android:name="com.vasyaevstropov.runmanager.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature"/>
+    <uses-permission android:name="com.vasyaevstropov.runmanager.permission.MAPS_RECEIVE"/>
+
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -22,31 +30,21 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service android:name=".GPSservice" />
 
         <activity
             android:name=".SettingActivity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".RunListActivity" />
-        <activity android:name=".MapRunActivity"></activity>
 
-
+        <service android:name=".GPSservice" />
 
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyCvHaqzmqk6h2tPCZv7WlR9W7hjZN4x03I"/>
-        <uses-feature
-            android:glEsVersion="0x00020000"
-            android:required="true"/>
-
-
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCWO9bAxj87GA5FPQAiPlcfYDrD2jm2Tpk" />
 
     </application>
-
-
 </manifest>
