--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -40,12 +41,14 @@
         <activity android:name=".Activities.MapActivity" />
 
         <service android:name=".Services.GPSservice" />
+        <service android:name=".Services.MusicService" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyCWO9bAxj87GA5FPQAiPlcfYDrD2jm2Tpk" />
 
-        <activity android:name=".Activities.CardListActivity"></activity>
+        <activity android:name=".Activities.CardListActivity" />
+        <activity android:name=".Activities.MediaPlayerActivity"></activity>
     </application>
 
 </manifest>
