add circle button

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     compile 'com.firebaseui:firebase-ui:0.6.+'
+    compile 'com.cuboid:cuboidcirclebutton:1.0.3'
     testCompile 'junit:junit:4.12'
 }
 
